--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "1.0.0",
   "description": "high-level p2p open street map database for node and the browser",
   "main": "index.js",
+  "browser": "browser.js",
   "directories": {
     "example": "example"
   },
   "dependencies": {
     "deferred-chunk-store": "^1.0.0",
     "deferred-leveldown": "^1.2.1",
-    "fd-chunk-store": "^1.3.0",
+    "fd-chunk-store": "^2.0.0",
     "hyperlog": "^4.7.0",
+    "idb-chunk-store": "^0.1.0",
+    "level-browserify": "^1.1.0",
     "leveldown": "^1.4.4",
     "levelup": "^1.3.1",
     "mkdirp": "^0.5.1",
