--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "leveldown": "^1.4.4",
     "levelup": "^1.3.1",
     "mkdirp": "^0.5.1",
+    "once": "^1.3.3",
     "osm-p2p-db": "^3.5.0"
   },
   "devDependencies": {
