--- a/package.json
+++ b/package.json
@@ -8,17 +8,14 @@
     "example": "example"
   },
   "dependencies": {
-    "deferred-chunk-store": "^1.0.1",
     "deferred-leveldown": "^1.2.1",
-    "fd-chunk-store": "^2.0.0",
-    "hyperlog": "^4.10.0",
-    "idb-chunk-store": "~0.1.0",
-    "level-browserify": "^1.1.0",
+    "kappa-core": "^2.6.2",
+    "kappa-osm": "^2.0.3",
     "leveldown": "^1.4.4",
     "levelup": "^1.3.1",
     "mkdirp": "^0.5.1",
     "once": "^1.3.3",
-    "osm-p2p-db": "^4.0.0"
+    "random-access-file": "^2.1.0"
   },
   "keywords": [
     "osm",
