--- a/package.json
+++ b/package.json
@@ -8,12 +8,9 @@
     "example": "example"
   },
   "dependencies": {
-    "deferred-leveldown": "^1.2.1",
     "kappa-core": "^2.6.2",
     "kappa-osm": "^2.0.3",
-    "leveldown": "^1.4.4",
-    "levelup": "^1.3.1",
-    "mkdirp": "^0.5.1",
+    "level": "^4.0.0",
     "once": "^1.3.3",
     "random-access-file": "^2.1.0"
   },
