--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
   "directories": {
     "example": "example"
   },
+  "scripts": {
+    "test": "tape test/*"
+  },
   "dependencies": {
     "kappa-core": "^4.0.0",
     "kappa-osm": "^3.0.0",
     "level": "^5.0.0",
+    "mkdirp": "^0.5.1",
     "once": "^1.3.3",
     "random-access-file": "^2.1.0"
   },
@@ -32,5 +36,9 @@
   "bugs": {
     "url": "https://github.com/digidem/osm-p2p/issues"
   },
-  "homepage": "https://github.com/digidem/osm-p2p#readme"
+  "homepage": "https://github.com/digidem/osm-p2p#readme",
+  "devDependencies": {
+    "tape": "^4.11.0",
+    "tmp": "^0.1.0"
+  }
 }
