--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "test": "tape test/*"
   },
   "dependencies": {
-    "kappa-core": "^4.0.0",
-    "kappa-osm": "^3.0.0",
-    "level": "^5.0.0",
+    "kappa-core": "^6.0.0",
+    "kappa-osm": "^4.0.0",
+    "level": "^6.0.0",
     "mkdirp": "^0.5.1",
     "once": "^1.3.3",
     "random-access-file": "^2.1.0"
@@ -27,7 +27,12 @@
     "geo",
     "map"
   ],
-  "author": "substack",
+  "authors": [
+    "substack",
+    "okdistribute",
+    "noffle",
+    "gmaclennan"
+  ],
   "license": "BSD",
   "repository": {
     "type": "git",
